# delete-me-discord

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  DISCORD_USER_ARTIFACT_AUDIT.md  LIVE_TEST_SUITE_PLAN.md  MANIFEST.in  MIGRATION_V3.md  PROFILE-MANAGEMENT-FEATURE.md  PROFILES-FEATURE.md  README.md  delete_me_discord.spec  flake.nix  pyinstaller_runner.py  pyproject.toml  setup.py  shell.nix
.devcontainer/: devcontainer.json  requirements-dev.txt
.github/: renovate.json
delete_me_discord/: __init__.py  __main__.py  api.py  app_config.py  auth.py  channel_types.py  cleaner.py  discovery.py  discovery_renderers.py  logging.py  models.py  options.py  preserve_cache.py  privacy.py  progress.py  rate_limits.py  scope_filter.py  scope_ids.py  scope_inventory.py  scope_rules.py  scope_selectors.py  storage.py  thread_cleanup.py  type_enums.py  utils.py
docs/: astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
test/: test_api_behavior.py  test_api_fetch_message.py  test_api_request_paths.py  test_app_config.py  test_auth.py  test_cleaner_behavior.py  test_discovery_collect.py  test_discovery_filters.py  test_discovery_renderers.py  test_discovery_run.py  test_json_logging.py  test_main_orchestration.py  test_options_parse_args.py  test_packaging_metadata.py  test_preserve_cache.py  test_preserve_cache_merge.py  test_privacy.py  test_progress.py  test_scope_selectors.py
tests/: __init__.py  _thread_cleanup_support.py  conftest.py  test_api_behavior.py  test_api_fetch_message.py  test_api_request_paths.py  test_app_config.py  test_auth.py  test_channel_types.py  test_cleaner_behavior.py  test_cleanup_planner.py  test_cli_commands.py  test_cli_logging.py  test_cli_parser.py  test_config.py  test_config_parsing.py  test_discord_formatting.py  test_discovery_collect.py  test_discovery_filters.py  test_discovery_run.py  (+27 more)
(+76 files in other folders)
