[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "delete-me-discord"
version = "2.2.6"
readme = "README.md"

description = "Tool to mass delete your Discord messages and reactions with filters and retention controls."
requires-python = ">=3.10"
dependencies = [
    "keyring>=25.7.0",
    "requests>=2.34.2",
    "rich>=15.0.0,<16",
]
license = "MIT"

classifiers = [
        "Intended Audience :: Developers",
        "Topic :: Communications :: Chat",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
]

[[project.authors]]
name = "Jan T. Müller"
email = "mail@jantmueller.com"

[project.urls]
homepage = "https://github.com/janthmueller/delete-me-discord"
documentation = "https://janthmueller.github.io/delete-me-discord/"
source = "https://github.com/janthmueller/delete-me-discord"
tracker = "https://github.com/janthmueller/delete-me-discord/issues"

[project.scripts]
delete-me-discord = "delete_me_discord:main"
dmd = "delete_me_discord:main"

[tool.setuptools.packages.find]
include = ["delete_me_discord*"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pyright]
include = ["delete_me_discord"]
pythonVersion = "3.10"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["delete_me_discord/_version.py:__version__"]
commit_parser = "conventional"
branch = "main"  
upload_to_repository = true
upload_to_release = true
build_command = "python -m build"
